objects/L2I_Deal_Summary__c.object
<CustomObject>
    <description>A summary of the deal that is being presented for P&amp;L approval</description>
    <fields>
        <fullName>All_Products_Services_Currently_Availabl__c</fullName>
        <inlineHelpText>Are all Products/Services currently available?</inlineHelpText>
        <label>All Products/Services Currently Avail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_New_Corp_Entities_Branch_Off_Needed__c</fullName>
        <inlineHelpText>Any New Corporate Entities or Branch Offices Needed</inlineHelpText>
        <label>Any New Corp Entities/Branch Off Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DS_DSS_Escalation_Applicability__c</fullName>
        <label>DSS : Escalation Applicability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_DSS_Fit_Type__c</fullName>
        <label>DSS : Fit Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_DSS_Gross_Revenue__c</fullName>
        <formula>L2I_P_L_Approval__r.PL_DSS_GR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSS : Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS_Financials_Included__c</fullName>
        <label>Financials Included</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_Gross_Margin__c</fullName>
        <formula>L2I_P_L_Approval__r.PL_T_GM_P__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Aircraft_Quantity__c</fullName>
        <label>IFC : Aircraft Quantity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Delivery_SLA_Penalty_Cap__c</fullName>
        <label>IFC : Delivery/SLA Penalty Cap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Escalation_Applicability__c</fullName>
        <label>IFC : Escalation Applicability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Escalation_Start_Date__c</fullName>
        <label>IFC : Escalation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Escalation__c</fullName>
        <label>IFC : Escalation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Fit_Type__c</fullName>
        <label>IFC : Fit Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Gross_Revenue__c</fullName>
        <formula>L2I_P_L_Approval__r.PL_IFC_GR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFC : Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Hardware_System_Type__c</fullName>
        <label>IFC : Hardware System Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Initial_Ship_Date__c</fullName>
        <label>IFC : Initial Ship Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Obsolescence_Provisions_Included__c</fullName>
        <label>IFC : Obsolescence Provisions Included</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Program_Numbers__c</fullName>
        <label>IFC : Program Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_SLA_Guarantee__c</fullName>
        <label>IFC : Delivery/SLA Guarantee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Service_Term_Months__c</fullName>
        <label>IFC : Service Term (Months)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Service_Types__c</fullName>
        <label>IFC : Service Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Summary_of_Incentives__c</fullName>
        <label>IFC : Summary of Incentives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_System_Type__c</fullName>
        <label>IFC : System Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Total_Value_of_Other_Concessions__c</fullName>
        <label>IFC : Total Value of Other Concessions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Total_Value_of_Shipset_Credits__c</fullName>
        <label>IFC : Total Value of Shipset Credits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Warranty_Months__c</fullName>
        <label>IFC : LRU/Rotable Warranty Months</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Warranty_Start_Date__c</fullName>
        <label>IFC : Warranty Start Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFC_Warranty_TAT__c</fullName>
        <label>IFC : Standard In Warranty TAT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFE_Dedicated_Rack__c</fullName>
        <label>IFE : Dedicated Rack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFE_Fit_Type__c</fullName>
        <label>IFE : Fit Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFE_Gross_Revenue__c</fullName>
        <formula>L2I_P_L_Approval__r.PL_IFE_GR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IFE : Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS_IFE_Obsolescence_Provisions_Included__c</fullName>
        <label>IFE : Obsolescence Provisions Included</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFE_Program_Numbers__c</fullName>
        <label>IFE : Program Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFE_Warranty_Months__c</fullName>
        <label>IFE : LRU/Rotable Warranty Months</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFE_Warranty_Start_Date__c</fullName>
        <label>IFE : Warranty Start Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_IFE_Warranty_TAT__c</fullName>
        <label>IFE : Standard In Warranty TAT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_Net_Revenue__c</fullName>
        <formula>L2I_P_L_Approval__r.PL_T_NR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS_PTS_Escalation_Applicability__c</fullName>
        <label>PTS : Escalation Applicability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_PTS_Fit_Type__c</fullName>
        <label>PTS : Fit Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DS_PTS_Gross_Revenue__c</fullName>
        <formula>L2I_P_L_Approval__r.PL_PTS_GR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTS : Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DS_Profit_Before_Tax__c</fullName>
        <formula>L2I_P_L_Approval__r.PL_T_PTP_P__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Before Tax %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Form_Agreement_Available_for_All_Product__c</fullName>
        <inlineHelpText>Form Agreement Available for All Products and Services</inlineHelpText>
        <label>Form Agreement Avail For All Prod/Serv</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IFE_Service_Types__c</fullName>
        <description>Inflight Entertainment Service Types</description>
        <label>IFE : Service Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2IAny_New_Product_Certifications_Needed__c</fullName>
        <label>Any New Product Certifications Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Account_Billing_Address__c</fullName>
        <formula>IF(NOT(ISBLANK(L2I_Deal_Account__r.BillingAddress)), L2I_Deal_Account__r.BillingStreet +&quot;, &quot;+
L2I_Deal_Account__r.BillingCity +&quot;, &quot;+
L2I_Deal_Account__r.BillingState +&quot;, &quot;+
L2I_Deal_Account__r.BillingPostalCode +&quot;, &quot;+
L2I_Deal_Account__r.BillingCountry,NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this field is blank then the Billing Address on Account is not populated</inlineHelpText>
        <label>Account Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Type__c</fullName>
        <label>Aircraft Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Any_Custom_SW_Development__c</fullName>
        <label>Any Custom SW Development</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Any_New_Regulatory_Approvals_Needed__c</fullName>
        <label>Any New Regulatory Approvals Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_CIISLA_Status_Explanation_Details__c</fullName>
        <label>CIISLA: Status Explanation Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_CIISLA_Status_Explanation__c</fullName>
        <label>CIISLA: Status Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_CIISLA_Status__c</fullName>
        <label>CIISLA: Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Connectivity_Revenue_Model__c</fullName>
        <label>IFC : Connectivity Revenue Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Connectivity_Status_Explanation_Det__c</fullName>
        <label>Connectivity: Status Explanation Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Connectivity_Status_Explanation__c</fullName>
        <label>Connectivity: Status Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Connectivity_Status__c</fullName>
        <label>Connectivity: Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Aircraft_Quantity__c</fullName>
        <label>DSS : Aircraft Quantity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Concessions__c</fullName>
        <label>xxx Concessions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_DSS_End_Date__c</fullName>
        <label>xxx End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Escalation_Start_Date__c</fullName>
        <label>DSS : Escalation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Escalation__c</fullName>
        <label>DSS : Escalation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Fixed_Pricing__c</fullName>
        <label>xxx Fixed Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_DSS_Renewal_Duration_Months__c</fullName>
        <label>xxx Renewal Duration (Months)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_DSS_Renewal__c</fullName>
        <label>xxx Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_DSS_SLA_Guarantee__c</fullName>
        <label>DSS : Delivery/SLA Guarantee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_SLA_Penalties__c</fullName>
        <label>SLA Penalties</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_DSS_SLA_Penalty_Cap_Amount__c</fullName>
        <label>xxx SLA Penalty Cap Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_SLA_Penalty_Cap_Type__c</fullName>
        <label>xxx SLA Penalty Cap Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>$</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_DSS_SLA_Penalty_Cap__c</fullName>
        <label>DSS : Delivery/SLA Penalty Cap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Service_Term_Months__c</fullName>
        <label>DSS : Service Term (Months)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Service_Types__c</fullName>
        <label>DSS : Service Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Service_Types_old__c</fullName>
        <label>DSS Service Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DSS_Service_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_DSS_Services_End_Date__c</fullName>
        <formula>L2I_IFEC_Escalation_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxx Services End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Services_Start_Date__c</fullName>
        <label>DSS : Services Start Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Summary_of_Incentives__c</fullName>
        <label>DSS : Summary of Incentives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_DSS_Total_Value_of_Other_Concessions__c</fullName>
        <label>DSS : Total Value of Other Concessions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_DealOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Summaries</relationshipLabel>
        <relationshipName>Deal_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Summaries</relationshipLabel>
        <relationshipName>Deal_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Summary_Owner__c</fullName>
        <formula>L2I_P_L_Approval__r.Owner:User.FirstName +&quot; &quot;+  L2I_P_L_Approval__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Summary Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Summary_Status__c</fullName>
        <formula>Text(L2I_P_L_Approval__r.ApprovalStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Expecting_Future_Sales__c</fullName>
        <label>Expecting Future Sales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Financials_Included__c</fullName>
        <formula>IF(INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c , &quot;IFEC&quot;), &quot;IFEC&quot;, NULL)  + &quot;;&quot; + 
IF(INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c , &quot;DSS&quot;), &quot;DSS&quot;, NULL)  + &quot;;&quot; + 
IF(INCLUDES( L2I_P_L_Approval__r.L2I_Financials_Included__c , &quot;PTS&quot;), &quot;PTS&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxx Financials Included</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Forecast__c</fullName>
        <label>Forecast</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>≤ 1 YR</fullName>
                </value>
                <value>
                    <fullName>&gt; 1 YR but ≤ 2 YRS</fullName>
                </value>
                <value>
                    <fullName>&gt; 2 YRS but ≤ 3 YRS</fullName>
                </value>
                <value>
                    <fullName>&gt; 3 YRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Forecasted_Data_Usage_per_AC_per_Mo__c</fullName>
        <label>IFC : Forecasted Data Usage per AC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_GTA_Status_Explanation_Add_l_Details__c</fullName>
        <label>GTA: Status Explanation Add&#39;l Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_GTA_Status_Explanation__c</fullName>
        <label>GTA: Status Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_GTA_Status__c</fullName>
        <label>GTA: Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Gross_Revenue__c</fullName>
        <formula>L2I_P_L_Approval__r.PL_T_GR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_IFECTotal_Value_of_Other_Concessions__c</fullName>
        <label>IFE : Total Value of Other Concessions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Delivery_Guarantee__c</fullName>
        <label>IFE : Delivery/SLA Guarantee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Delivery_Penalties__c</fullName>
        <label>xxx Delivery Penalties</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Delivery_Penalty_Cap_Amount__c</fullName>
        <label>xxx Delivery Penalty Cap Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Delivery_Penalty_Cap_Type__c</fullName>
        <label>xxx Delivery Penalty Cap Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>$</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Delivery_Penalty_Cap__c</fullName>
        <label>IFE : Delivery/SLA Penalty Cap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_End_Date__c</fullName>
        <label>xxx End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Escalation_Applicability__c</fullName>
        <label>IFE : Escalation Applicability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Escalation_Start_Date__c</fullName>
        <label>IFE : Escalation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Escalation__c</fullName>
        <label>IFE : Escalation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Fixed_Pricing__c</fullName>
        <label>xxx Fixed Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Hardware_System_Type__c</fullName>
        <label>IFE : Hardware System Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Hardware_System_Type_old__c</fullName>
        <label>Hardware System Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Hardware_System_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Initial_Ship_Date__c</fullName>
        <label>IFE : Initial Ship Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Other_Concessions__c</fullName>
        <label>xxx Other Concessions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Program_Number__c</fullName>
        <label>IFEC Program Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Shipset_Credit_Trigger__c</fullName>
        <label>xxx Shipset Credit Trigger</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aircraft Delivery</fullName>
                </value>
                <value>
                    <fullName>Aircraft EIS</fullName>
                </value>
                <value>
                    <fullName>Specific Date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Shipset_Credit__c</fullName>
        <label>xxx Shipset Credit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Shipset_Quantity__c</fullName>
        <label>Shipset Quantity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Summary_of_Incentives__c</fullName>
        <label>IFE : Summary of Incentives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Total_Values_of_Shipset_Credits__c</fullName>
        <label>IFE : Total Value of Shipset Credits</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Validity_Period__c</fullName>
        <label>xxx Validity Period</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defined Period</fullName>
                </value>
                <value>
                    <fullName>Specific End Date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Is_PO_Issuer_Same_As_Account__c</fullName>
        <description>This field is no longer used as per story W-002229</description>
        <label>xxx Is PO Issuer Same As Account?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_LRU_Rotable_Warranty_Months__c</fullName>
        <label>xxx LRU/Rotable Warranty Months</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Linefit_Or_Retrofit__c</fullName>
        <label>xxx Fit Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_New_or_Existing_Account__c</fullName>
        <label>New or Existing Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_OEM__c</fullName>
        <label>OEM</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OEM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Obsolescence_Provisions_Included__c</fullName>
        <label>xxx Obsolescence Provisions Included</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_OneMedia_Status_Explanation__c</fullName>
        <label>OneMedia: Status Explanation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_OneMedia_Status__c</fullName>
        <label>OneMedia: Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_PO_Issuer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As per Story W-002229 This field is no longer used.</description>
        <label>xxx PO Issuer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Summaries (PO Issuer)</relationshipLabel>
        <relationshipName>PO_Issuers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_PTS_Aircraft_Quantity__c</fullName>
        <label>PTS : Aircraft Quantity</label>
        <type>TextArea</type>
    </fields>
</CustomObject>